test/tests/operators/read_feather/truncated_boundary.txt
error: truncated Feather input
 --> tests/operators/read_feather/truncated_boundary.tql:6:3
  |
6 |   read_feather
  |   ^^^^^^^^^^^^ 
  |
  = note: discarded 344 trailing bytes
